# recon-silly-ation

./: CHANGELOG.adoc  CITATION.cff  CLAUDE.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Containerfile  ECOSYSTEM.scm  LICENSE.txt  MAINTAINERS.md  META.scm  README.adoc  SECURITY.md  STATE.scm  deno.json  flake.nix  guix.scm  justfile  podman-compose.yml
.github/workflows/: ci.yml  codeql.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
docs/: RSR-COMPLIANCE-AUDIT.adoc  TPCF.adoc
scripts/: verify-rsr-compliance.ts
src/: Docubot.res  Docudactyl.res  Protocol.res  main.ts
src/wasm/: mod.ts
wasm-modules/: Cargo.toml
wasm-modules/src/: lib.rs
wasm-modules/src/reconforth/: builtins.rs  formats.rs  mod.rs  types.rs
